# face_segment

./: README.md
face_segmentor/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  face_seg.py  segmentCaffe.cpp
face_segmentor/data/: HGNet_S2_deploy.prototxt
